2024-09-30  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* eptex.ech: kcatcode (latin_ucs(14)) is removed
	since it will be supported in upTeX-2.00.

2024-09-28  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* euptex-{ctrlsym,kinsoku,prntknj}.test:
	Skip tests with updvitype if updvitype are not built.

2024-09-21  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* eptex.ech, pdfutils.ch:
	Better support for kcatcode=20 (modifier).
	* euptex-{ctrlsym,kinsoku,prntknj,ucs}.test,
	tests/{control-symbol,ctrlsym.tex,endlinechar,free_{ixsp,pena},
	inhibitglue,kinsoku_{search,table},postpena,printkanji,ucs}.tex,
	tests/eup-{endline,inhibitglue,jctrlsym,pknj-{e,s,u}}a.typ,
	tests/{endline,free_{ixsp,pena},jctrlsym,kinsoku_{search,table},
	pknj-{e,s,u},postpena,ucs-{e,s,u}}.log:
	Add regression tests by using Kitagawa-san's and
	Yamashita-san's sample files.
	* tests/{free_{ixsp,pena},inhibitglue,kinsoku_{search,table},
	postpena}.tex: Move from ../ptexdir/tests .
	* am/euptex.am: Adjust.

2024-06-04  Akira Kakuto  <kakuto@jcom.zaq.ne.jp>

	* unbalanced-braces-eptex.ch, suppresserrors.ch: sync with the upstream

2024-06-03  Karl Berry  <karl@freefriends.org>

	* suppresserrors.ch (check_outer_validity): comment out hunk
	for this procedure adding a check for "suppress_outer_error=0", to
	avoid conflict with new change in tex.ch at the same place.

2024-05-18  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* euptex-ctrlsym.test, tests/ctrlsym.{tex,log},
	am/euptex.am: Add tests for getting character codes
	from control symbols by using backquote "`".
	https://github.com/texjporg/tex-jp-build/issues/167

2024-05-01  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* pdfutils.ch: Revert some patches.

2024-04-27  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* eptex.ech, pdfutils.ch, euptex.defines:
	Support new encoding of upTeX for combining characters
	with multiple codepoints.
	https://github.com/texjporg/tex-jp-build/issues/46
	* COPYRIGHT: copyright year.

2024-04-24  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
