@@ -33,8 +33,8 @@
 @y
 @d eTeX_version_string=='-2.6' {current \eTeX\ version}
 @#
-@d epTeX_version_string=='-230214'
-@d epTeX_version_number==230214
+@d epTeX_version_string=='-240930'
+@d epTeX_version_number==240930
 @z
 
 @x e-upTeX: banner
