@@ -1,0 +1,30 @@
+#! /bin/sh -vx
+# Copyright 2024 Japanese TeX Development Community <issue@texjp.org>
+# You may freely use, modify and/or distribute this file.
+
+BinDir=${BinDir:-.}
+ExeExt=${ExeExt:-}
+_euptex=$BinDir/euptex$ExeExt
+
+LC_ALL=C; export LC_ALL;  LANGUAGE=C; export LANGUAGE
+
+TEXMFCNF=$srcdir/../kpathsea;export TEXMFCNF
+OFMFONTS=".;$srcdir/tests"; export OFMFONTS
+TEXINPUTS=".;$srcdir/tests"; export TEXINPUTS
+TEXFORMATS=.; export TEXFORMATS
+
+# get same filename in log
+rm -f eup-prim.*
+$LN_S $srcdir/euptexdir/tests/eup-prim.tex ./eup-prim.tex
+
+if test ! -f ./eup-basic.fmt; then
+  cp $srcdir/tests/dump-basic.tex ./eup-basic.tex
+  $_euptex -ini -etex eup-basic || exit 1
+fi
+
+$_euptex -fmt=eup-basic -interaction=batchmode eup-prim || :
+
+sed 1d eup-prim.log >eup-prim.out
+
+diff $srcdir/euptexdir/tests/eup-prim.log eup-prim.out || exit 3
+
