@@ -4,7 +4,7 @@
 
 【著作権表示】
 Copyright (C) 2009 ASCII MEDIA WORKS.
-Copyright (C) 2007-2023 Takuji Tanaka
+Copyright (C) 2007-2024 Takuji Tanaka
 All rights reserved.
 
 【契約条件】
