@@ -1,3 +1,10 @@
+2024-10-12  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* euptex-prim.test, tests/eup-prim.{tex,log},
+	am/euptex.am: Add a test.
+	* eptex_version.h, eptex.ech:
+	Bump version to 240930.
+
 2024-09-30  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* eptex.ech: kcatcode (latin_ucs(14)) is removed
